syntax = "proto3";
package protos.seat.services;
option go_package = "simple-restful/exmsgs/seat/services;seat_svc";

import "protos/seat/models/seat.proto";

service SeatService {
    rpc GetAvailableSeats (GetAvailableSeatsRequest) returns (SeatsResult);
    rpc BookSeats (SeatsRequest) returns (SeatAvailabilityResult);
    rpc Reset (EmptyRequest) returns (ResultResponse);
}

// Messages
message SeatsRequest {
    repeated protos.seat.models.Seat list = 1;
    int64 min_distance = 2;
    string session = 3;
    // Confirm booking
    bool confirm = 4;
}

message GetAvailableSeatsRequest {
    string current_session = 1;
}

message SetOfSeats {
    int64 row = 1;
    repeated int64 cols = 2;
}

message SeatsResult {
    repeated SetOfSeats list = 1;
    int64 totalAvailable = 2;
}

message SeatAvailabilityResult {
    repeated protos.seat.models.Seat available = 1;
    repeated protos.seat.models.Seat unavailable = 2;
    string session = 3;
    string status = 4;
}

message EmptyRequest {
}

message ResultResponse {
    string status = 1;
}